made some fix and updated channel creation/validation and update
