# src/api/PortalApiClient.ts
@@ -39,6 +39,7 @@ import { UpdateCreditorInstitutionDto } from './generated/portal/UpdateCreditorI
 import { WrapperChannelDetailsDto } from './generated/portal/WrapperChannelDetailsDto';
 import { WfespPluginConfs } from './generated/portal/WfespPluginConfs';
 import { WrapperChannelsResource } from './generated/portal/WrapperChannelsResource';
+import { WrapperChannelDetailsResource } from './generated/portal/WrapperChannelDetailsResource';
 
 const withBearer: WithDefaultsT<'bearerAuth'> = (wrappedOperation) => (params: any) => {
   const token = storageTokenOps.read();
@@ -166,12 +167,6 @@ export const PortalApi = {
     return extractResponse(result, 200, onRedirectToLogin);
   },
 
-  // retrive of channel details on the node
-  getChannelDetails: async (channelcode: string): Promise<ChannelDetailsResource> => {
-    const result = await apiConfigClient.getChannelDetailsUsingGET({ channelcode });
-    return extractResponse(result, 200, onRedirectToLogin);
-  },
-
   // retrive of channel detail before on db and then on the node
   getChannelDetail: async (channelcode: string): Promise<ChannelDetailsResource> => {
     const result = await apiConfigClient.getChannelDetailUsingGET({ channelcode });
@@ -202,43 +197,47 @@ export const PortalApi = {
     return extractResponse(result, 200, onRedirectToLogin);
   },
 
-  createChannel: async (channel: ChannelDetailsDto): Promise<ChannelDetailsResource> => {
+  createChannel: async (channel: ChannelDetailsDto): Promise<WrapperChannelDetailsResource> => {
     const result = await apiConfigClient.createChannelUsingPOST({
       body: {
-        broker_psp_code: channel.broker_psp_code,
+        agid: true,
         broker_description: channel.broker_description,
+        broker_psp_code: channel.broker_psp_code,
+        card_chart: channel.card_chart,
         channel_code: channel.channel_code,
-        redirect_protocol: channel.redirect_protocol,
-        redirect_port: channel.redirect_port,
+        digital_stamp_brand: channel.digital_stamp_brand,
+        enabled: true,
+        flag_io: channel.flag_io,
+        flagPspCp: channel.flagPspCp,
+        ip: channel.ip,
+        new_password: channel.new_password,
+        nmp_service: channel.nmp_service,
+        on_us: channel.on_us,
+        password: channel.password,
+        payment_model: channel.payment_model,
+        payment_types: channel.payment_types,
+        port: channel.port,
+        primitive_version: channel.primitive_version,
+        protocol: channel.protocol,
+        proxy_host: channel.proxy_host,
+        proxy_port: channel.proxy_port,
+        recovery: channel.recovery,
         redirect_ip: channel.redirect_ip,
         redirect_path: channel.redirect_path,
+        redirect_port: channel.redirect_port,
+        redirect_protocol: channel.redirect_protocol,
         redirect_query_string: channel.redirect_query_string,
+        rt_push: channel.rt_push,
+        serv_plugin: channel.serv_plugin,
+        service: channel.service,
+        status: StatusEnum.APPROVED,
         target_host: channel.target_host,
         target_path: channel.target_path,
         target_port: channel.target_port,
-        payment_types: channel.payment_types,
-        status: channel.status,
-        primitive_version: channel.primitive_version,
-        password: channel.password,
-        new_password: channel.new_password,
-        protocol: channel.protocol,
-        ip: channel.ip,
-        port: channel.port,
-        service: channel.service,
-        nmp_service: channel.nmp_service,
-        proxy_port: channel.proxy_port,
-        proxy_host: channel.proxy_host,
-        payment_model: channel.payment_model,
-        serv_plugin: channel.serv_plugin,
         thread_number: channel.thread_number,
         timeout_a: channel.timeout_a,
         timeout_b: channel.timeout_b,
         timeout_c: channel.timeout_c,
-        rt_push: channel.rt_push,
-        card_chart: channel.card_chart,
-        recovery: channel.recovery,
-        digital_stamp_brand: channel.digital_stamp_brand,
-        on_us: channel.on_us,
       },
     });
     return extractResponse(result, 201, onRedirectToLogin);
@@ -276,172 +275,194 @@ export const PortalApi = {
     const result = await apiConfigClient.updateChannelUsingPUT({
       channelcode: code,
       body: {
-        broker_psp_code: channel.broker_psp_code,
+        agid: true,
         broker_description: channel.broker_description,
+        broker_psp_code: channel.broker_psp_code,
+        card_chart: channel.card_chart,
         channel_code: channel.channel_code,
-        redirect_protocol: channel.redirect_protocol,
-        redirect_port: channel.redirect_port,
+        digital_stamp_brand: channel.digital_stamp_brand,
+        enabled: true,
+        flag_io: channel.flag_io,
+        flagPspCp: channel.flagPspCp,
+        ip: channel.ip,
+        new_password: channel.new_password,
+        nmp_service: channel.nmp_service,
+        on_us: channel.on_us,
+        password: channel.password,
+        payment_model: channel.payment_model,
+        payment_types: channel.payment_types,
+        port: channel.port,
+        primitive_version: channel.primitive_version,
+        protocol: channel.protocol,
+        proxy_host: channel.proxy_host,
+        proxy_port: channel.proxy_port,
+        recovery: channel.recovery,
         redirect_ip: channel.redirect_ip,
         redirect_path: channel.redirect_path,
+        redirect_port: channel.redirect_port,
+        redirect_protocol: channel.redirect_protocol,
         redirect_query_string: channel.redirect_query_string,
+        rt_push: channel.rt_push,
+        serv_plugin: channel.serv_plugin,
+        service: channel.service,
+        status: StatusEnum.APPROVED,
         target_host: channel.target_host,
         target_path: channel.target_path,
         target_port: channel.target_port,
-        payment_types: channel.payment_types,
-        primitive_version: channel.primitive_version,
-        password: channel.password,
-        new_password: channel.new_password,
-        protocol: channel.protocol,
-        ip: channel.ip,
-        port: channel.port,
-        service: channel.service,
-        nmp_service: channel.nmp_service,
-        proxy_port: channel.proxy_port,
-        proxy_host: channel.proxy_host,
-        payment_model: channel.payment_model,
-        serv_plugin: channel.serv_plugin,
         thread_number: channel.thread_number,
         timeout_a: channel.timeout_a,
         timeout_b: channel.timeout_b,
         timeout_c: channel.timeout_c,
-        rt_push: channel.rt_push,
-        card_chart: channel.card_chart,
-        recovery: channel.recovery,
-        digital_stamp_brand: channel.digital_stamp_brand,
-        on_us: channel.on_us,
-        status: StatusEnum.APPROVED,
       },
     });
     return extractResponse(result, 200, onRedirectToLogin);
   },
 
   updateWrapperChannelDetailsToCheck: async (
-    channel: ChannelDetailsDto
+    channel: ChannelDetailsDto,
+    validationUrl: string
   ): Promise<WrapperEntitiesOperations> => {
     const result = await apiConfigClient.updateWrapperChannelDetailsUsingPUT({
       body: {
-        broker_psp_code: channel.broker_psp_code,
+        agid: true,
         broker_description: channel.broker_description,
+        broker_psp_code: channel.broker_psp_code,
+        card_chart: channel.card_chart,
         channel_code: channel.channel_code,
-        redirect_protocol: channel.redirect_protocol,
-        redirect_port: channel.redirect_port,
+        digital_stamp_brand: channel.digital_stamp_brand,
+        enabled: true,
+        flag_io: channel.flag_io,
+        flagPspCp: channel.flagPspCp,
+        ip: channel.ip,
+        new_password: channel.new_password,
+        nmp_service: channel.nmp_service,
+        on_us: channel.on_us,
+        password: channel.password,
+        payment_model: channel.payment_model,
+        payment_types: channel.payment_types,
+        port: channel.port,
+        primitive_version: channel.primitive_version,
+        protocol: channel.protocol,
+        proxy_host: channel.proxy_host,
+        proxy_port: channel.proxy_port,
+        recovery: channel.recovery,
         redirect_ip: channel.redirect_ip,
         redirect_path: channel.redirect_path,
+        redirect_port: channel.redirect_port,
+        redirect_protocol: channel.redirect_protocol,
         redirect_query_string: channel.redirect_query_string,
+        rt_push: channel.rt_push,
+        serv_plugin: channel.serv_plugin,
+        service: channel.service,
+        status: StatusEnum.TO_CHECK,
         target_host: channel.target_host,
         target_path: channel.target_path,
         target_port: channel.target_port,
-        payment_types: channel.payment_types,
-        primitive_version: channel.primitive_version,
-        status: StatusEnum.TO_CHECK,
-        password: channel.password,
-        new_password: channel.new_password,
-        protocol: channel.protocol,
-        ip: channel.ip,
-        port: channel.port,
-        service: channel.service,
-        nmp_service: channel.nmp_service,
-        proxy_port: channel.proxy_port,
-        proxy_host: channel.proxy_host,
-        payment_model: channel.payment_model,
-        serv_plugin: channel.serv_plugin,
         thread_number: channel.thread_number,
         timeout_a: channel.timeout_a,
         timeout_b: channel.timeout_b,
         timeout_c: channel.timeout_c,
-        rt_push: channel.rt_push,
-        card_chart: channel.card_chart,
-        recovery: channel.recovery,
-        digital_stamp_brand: channel.digital_stamp_brand,
-        on_us: channel.on_us,
+        validationUrl,
       },
     });
     return extractResponse(result, 200, onRedirectToLogin);
   },
 
   updateWrapperChannelDetailsToCheckUpdate: async (
-    channel: ChannelDetailsDto
+    channel: ChannelDetailsDto,
+    validationUrl: string
   ): Promise<WrapperEntitiesOperations> => {
     const result = await apiConfigClient.updateWrapperChannelDetailsUsingPUT({
       body: {
-        broker_psp_code: channel.broker_psp_code,
+        agid: true,
         broker_description: channel.broker_description,
+        broker_psp_code: channel.broker_psp_code,
+        card_chart: channel.card_chart,
         channel_code: channel.channel_code,
-        redirect_protocol: channel.redirect_protocol,
-        redirect_port: channel.redirect_port,
+        digital_stamp_brand: channel.digital_stamp_brand,
+        enabled: true,
+        flag_io: channel.flag_io,
+        flagPspCp: channel.flagPspCp,
+        ip: channel.ip,
+        new_password: channel.new_password,
+        nmp_service: channel.nmp_service,
+        on_us: channel.on_us,
+        password: channel.password,
+        payment_model: channel.payment_model,
+        payment_types: channel.payment_types,
+        port: channel.port,
+        primitive_version: channel.primitive_version,
+        protocol: channel.protocol,
+        proxy_host: channel.proxy_host,
+        proxy_port: channel.proxy_port,
+        recovery: channel.recovery,
         redirect_ip: channel.redirect_ip,
         redirect_path: channel.redirect_path,
+        redirect_port: channel.redirect_port,
+        redirect_protocol: channel.redirect_protocol,
         redirect_query_string: channel.redirect_query_string,
+        rt_push: channel.rt_push,
+        serv_plugin: channel.serv_plugin,
+        service: channel.service,
+        status: StatusEnum.TO_CHECK_UPDATE,
         target_host: channel.target_host,
         target_path: channel.target_path,
         target_port: channel.target_port,
-        payment_types: channel.payment_types,
-        primitive_version: channel.primitive_version,
-        status: StatusEnum.TO_CHECK_UPDATE,
-        password: channel.password,
-        new_password: channel.new_password,
-        protocol: channel.protocol,
-        ip: channel.ip,
-        port: channel.port,
-        service: channel.service,
-        nmp_service: channel.nmp_service,
-        proxy_port: channel.proxy_port,
-        proxy_host: channel.proxy_host,
-        payment_model: channel.payment_model,
-        serv_plugin: channel.serv_plugin,
         thread_number: channel.thread_number,
         timeout_a: channel.timeout_a,
         timeout_b: channel.timeout_b,
         timeout_c: channel.timeout_c,
-        rt_push: channel.rt_push,
-        card_chart: channel.card_chart,
-        recovery: channel.recovery,
-        digital_stamp_brand: channel.digital_stamp_brand,
-        on_us: channel.on_us,
+        validationUrl,
       },
     });
     return extractResponse(result, 200, onRedirectToLogin);
   },
 
   updateWrapperChannelDetailsByOpt: async (
-    channel: ChannelDetailsDto
+    channel: ChannelDetailsDto,
+    validationUrl: string
   ): Promise<WrapperEntitiesOperations> => {
     const result = await apiConfigClient.updateWrapperChannelDetailsByOptUsingPUT({
       body: {
-        broker_psp_code: channel.broker_psp_code,
+        agid: true,
         broker_description: channel.broker_description,
+        broker_psp_code: channel.broker_psp_code,
+        card_chart: channel.card_chart,
         channel_code: channel.channel_code,
-        redirect_protocol: channel.redirect_protocol,
-        redirect_port: channel.redirect_port,
+        digital_stamp_brand: channel.digital_stamp_brand,
+        enabled: true,
+        flag_io: channel.flag_io,
+        flagPspCp: channel.flagPspCp,
+        ip: channel.ip,
+        new_password: channel.new_password,
+        nmp_service: channel.nmp_service,
+        on_us: channel.on_us,
+        password: channel.password,
+        payment_model: channel.payment_model,
+        payment_types: channel.payment_types,
+        port: channel.port,
+        primitive_version: channel.primitive_version,
+        protocol: channel.protocol,
+        proxy_host: channel.proxy_host,
+        proxy_port: channel.proxy_port,
+        recovery: channel.recovery,
         redirect_ip: channel.redirect_ip,
         redirect_path: channel.redirect_path,
+        redirect_port: channel.redirect_port,
+        redirect_protocol: channel.redirect_protocol,
         redirect_query_string: channel.redirect_query_string,
+        rt_push: channel.rt_push,
+        serv_plugin: channel.serv_plugin,
+        service: channel.service,
+        status: StatusEnum.TO_CHECK_UPDATE,
         target_host: channel.target_host,
         target_path: channel.target_path,
         target_port: channel.target_port,
-        payment_types: channel.payment_types,
-        primitive_version: channel.primitive_version,
-        status: StatusEnum.TO_CHECK_UPDATE,
-        password: channel.password,
-        new_password: channel.new_password,
-        protocol: channel.protocol,
-        ip: channel.ip,
-        port: channel.port,
-        service: channel.service,
-        nmp_service: channel.nmp_service,
-        proxy_port: channel.proxy_port,
-        proxy_host: channel.proxy_host,
-        payment_model: channel.payment_model,
-        serv_plugin: channel.serv_plugin,
         thread_number: channel.thread_number,
         timeout_a: channel.timeout_a,
         timeout_b: channel.timeout_b,
         timeout_c: channel.timeout_c,
-        rt_push: channel.rt_push,
-        card_chart: channel.card_chart,
-        recovery: channel.recovery,
-        digital_stamp_brand: channel.digital_stamp_brand,
-        on_us: channel.on_us,
+        validationUrl,
       },
     });
     return extractResponse(result, 200, onRedirectToLogin);
